--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.8"
   },
   "scripts": {
